# openmob

./: .gitignore  CLAUDE.md  LICENSE  README.md  bugs.md
.claude/skills/openmob/: SKILL.md
.github/workflows/: release.yml
.planning/: ANDROID-GAPS.md  DEPENDENCY-UPGRADE-PLAN.md  FEATURE-AUDIT.md  PERF-AUDIT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  WINDOWS-AUDIT.md  config.json
.planning/phases/01-hub-core-android-device-layer/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-mcp-server-ios-simulator/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-aibridge-cli/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-end-to-end-integration-hub-polish/: 04-01-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
installer/: build-appimage.sh  openmob-installer.iss
openmob_bridge/: Cargo.toml  Makefile  README.md
openmob_bridge/src/: ansi.rs  bridge.rs  busy_detector.rs  handlers.rs  main.rs  patterns.rs  pty_handler.rs  queue.rs  server.rs
openmob_hub/: pubspec.yaml
openmob_hub/lib/: app.dart  main.dart
openmob_hub/linux/: CMakeLists.txt
openmob_hub/windows/: CMakeLists.txt
openmob_mcp/: README.md  package-lock.json  package.json  sea-config.json  tsconfig.json
openmob_mcp/scripts/: build-sea.ps1  build-sea.sh
openmob_mcp/src/: hub-client.ts  index.ts  types.ts
openmob_skills/: SKILL.md  install.sh
openmob_skills/mcp-configs/: claude-desktop.json  vscode.json
scripts/: build-all.sh  install-skill.ps1  install-skill.sh
(+122 files in other folders)
