[package]
name = "aibridge"
version = "0.1.0"
edition = "2021"
description = "PTY wrapper for terminal AI agents with HTTP injection API"

[dependencies]
portable-pty = "0.8"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
strip-ansi-escapes = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tokio-util = { version = "0.7", features = ["rt"] }
terminal_size = "0.4"
crossterm = "0.28"
tower-http = { version = "0.6", features = ["cors"] }
