[package]
name = "openmob-bridge"
version = "0.0.10"
edition = "2021"
rust-version = "1.70"
description = "Wrap terminal AI agents (Claude Code, Codex, Gemini) with PTY layer and HTTP injection API. Part of OpenMob — free mobile device automation."
license = "MIT"
repository = "https://github.com/wm-jenildgohel/openmob"
homepage = "https://github.com/wm-jenildgohel/openmob"
documentation = "https://github.com/wm-jenildgohel/openmob"
readme = "README.md"
keywords = ["ai", "mcp", "mobile", "automation", "pty"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "aibridge"
path = "src/main.rs"

[dependencies]
portable-pty = "0.8"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
strip-ansi-escapes = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tokio-util = { version = "0.7", features = ["rt"] }
terminal_size = "0.4"
crossterm = "0.28"
tower-http = { version = "0.6", features = ["cors"] }
which = "7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
